--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
       </v-app>
     </div>
 
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script type="module" src="KeyboardModule.js"></script>
 
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <!-- include the Glitch button to show what the webpage is about and to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js"></script>
     <!-- simplekeyboard -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css">
     <script src="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.min.js"></script>
-
     <!-- Load up handsfree and Vue -->
     <script src="https://unpkg.com/handsfree@<4.1.0/dist/handsfree.js"></script>
     <script src="store/start-face.js"></script>
