added the keyboardThemeClass to the keyboard, added the keyboardThemeClass to the css, and removed the preceeding / in the css link so that it links to the css.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="icon" type="image/png" href="https://cdn.glitch.com/ee6351cf-ebdc-4924-864a-4df22172856f%2Ftensormonkey.png">
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/css/main.css">
-
+    <link rel="stylesheet" href="css/main.css">
     <!-- Vuetify -->
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vuetify/dist/vuetify.min.js"></script>
