--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
           <v-container full-height="full-height" grid-list-md="grid-list-md">
             <v-layout class="mb-5" justify-center="justify-center" wrap="wrap" align-center="align-center">
               <h2 id="generated"></h2>
-              <input class="input" placeholder="Tap on the virtual keyboard to start" />
-              <div class="simple-keyboard"></div>
+              <div class="keyboardAreaContainer">
+                <input class="input" placeholder="Tap on the virtual keyboard to start" />
+                <div class="keyboardContainer">
+                  <div class="simple-keyboard"></div>
+                </div>
+              </div>
               <v-flex xs12="xs12" md6="md6" lg6="lg6">
                 <v-card light="light">
                   <v-card-title primary-title="primary-title">
@@ -79,7 +83,9 @@
     <script src="https://button.glitch.me/button.js"></script>
     <!-- simplekeyboard -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swipe-keyboard@latest/build/css/index.css">
     <script src="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swipe-keyboard@latest/build/index.min.js"></script>
     <!-- Load up handsfree and Vue -->
     <script src="https://unpkg.com/handsfree@<4.1.0/dist/handsfree.js"></script>
     <script src="store/start-face.js"></script>
