--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
           <v-container full-height="full-height" grid-list-md="grid-list-md">
             <v-layout class="mb-5" justify-center="justify-center" wrap="wrap" align-center="align-center">
               <h2 id="generated"></h2>
-              <div class="keyboardAreaContainer">
+
+              <div class="container">
                 <input class="input" placeholder="Tap on the virtual keyboard to start" />
                 <div class="keyboardContainer">
                   <div class="simple-keyboard"></div>
                 </div>
               </div>
+
               <v-flex xs12="xs12" md6="md6" lg6="lg6">
                 <v-card light="light">
                   <v-card-title primary-title="primary-title">
@@ -84,8 +86,9 @@
     <!-- simplekeyboard -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swipe-keyboard@latest/build/css/index.css">
-    <script src="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-keyboard@2.7.4/build/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swipe-keyboard@latest/build/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-keyboard-autocorrect@latest/build/index.min.js"></script>
     <!-- Load up handsfree and Vue -->
     <script src="https://unpkg.com/handsfree@<4.1.0/dist/handsfree.js"></script>
     <script src="store/start-face.js"></script>
