Added the sentence Generator.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
               <h2 id="generated"></h2>
 
               <div class="container">
+                <div class="targetSentenceContainer">
+                  <span id="targetSentence"></span>
+                </div>
                 <input class="input" placeholder="Tap on the virtual keyboard to start" />
                 <div class="keyboardContainer">
                   <div class="simple-keyboard"></div>
@@ -95,5 +98,7 @@
     <script src="js/app.js"></script>
     <script src="starter.js"></script>
     <script src="js/handsfree-boids-debugger-plugin.js"></script>
+    <!-- Load up the txtgen script -->
+    <script src="txtgen/txtgen.js"></script>
   </body>
 </html>
