Post to google sheets added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="css/main.css">
     <!-- Vuetify -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vuetify/dist/vuetify.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
