--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
         </v-toolbar>
         <v-content>
           <v-chip label outline color="black"><span id="idLabel"></span></v-chip>
-          <v-chip label outline color="black"><span id="inputMethodLabel"></span></v-chip>
+          <v-chip label outline color="black"><span>Input Method: </span><span id="inputMethodLabel"></span></v-chip>
           <v-chip label outline color="black"><span id="evaluationLabel"></span></v-chip>
+          <v-chip label outline color="black"><span>Trial No. </span><span id="trialLabel"></span></v-chip>
 
           <div class="handsfree-debug-wrap"></div>
           <v-container full-height="full-height" grid-list-md="grid-list-md">
@@ -99,24 +100,23 @@
               <h2 id="generated"></h2>
 
               <div class="container">
-                <div class="targetSentenceContainer">
-                  <span id="targetSentence"></span>
+                <div id="targetSentenceDiv">
+                   <v-btn class="primary" large="large" id="beginTrialButton">Begin Trial</v-btn>
+                   <h3 id="targetSentence"></h3>
                 </div>
-                <input id="inputSentence" class="input" placeholder="Tap on the virtual keyboard to start" />
+                <input id="inputSentence" class="input" placeholder="Click the Begin Trial button to start" />
                 <div class="keyboardContainer">
                   <div class="simple-keyboard"></div>
+
                 </div>
               </div>
 
-              <v-flex xs12="xs12" md6="md6" lg6="lg6">
+              <!-- <v-flex xs12="xs12" md6="md6" lg6="lg6">
                 <v-card light="light">
                   <v-card-title primary-title="primary-title">
                     <h2 class="headline mb-0">Sandbox</h2>
                   </v-card-title>
 
-                  <!-- ######################### -->
-                  <!-- # INSERT YOUR HTML HERE # -->
-                  <!-- ######################### -->
                   <v-card-text>
                     <p>Turn head to move cursor and smile wide to click on things 😊</p>
                     <p>Insert the component you want to handsfree-ify here, like a <a href="https://glitch.com/~handsfree-youtube">YouTube video</a> or <a href="https://glitch.com/~handsfree-google-maps">Google Map</a>. Then edit <code>/starter.js</code> to control it!</p>
@@ -141,7 +141,7 @@
                     </div>
                   </v-card-text>
                 </v-card>
-              </v-flex>
+              </v-flex> -->
             </v-layout>
           </v-container>
         </v-content>
@@ -161,6 +161,7 @@
     <script src="https://unpkg.com/handsfree@<4.1.0/dist/handsfree.js"></script>
     <script src="store/start-face.js"></script>
     <script src="js/app.js"></script>
+    <script src="1-1000.js"></script>
     <script src="starter.js"></script>
     <script src="js/handsfree-boids-debugger-plugin.js"></script>
   </body>
